--- a/src/fabric-1.19/mappings/defaultfeatures.yaml
+++ b/src/fabric-1.19/mappings/defaultfeatures.yaml
@@ -1,32 +1,31 @@
 _default: null
+TaigaLargeFerns: Ferns
+JungleTreeForest: JungleTrees
+PlainsTallGrass: SavannaGrass
+TaigaGrassAndMushrooms: TaigaGrass
+Icebergs: Icebergs
 AmethystGeodes: DefaultCrystalFormations
 Bamboo: BambooVegetation
-BerryBushes: BerryBushes
-Caves: DefaultCarvers
+Caves: DefaultCarversAndLakes
 DeadBushes: DesertVegetation
+SwampVegetation: SwampVegetation
 DesertFeatures: DesertExtraDecoration
 Dripstone: Dripstone
-ExtraEmeraldOre: ExtraEmeralds
+Ores: DefaultOres
+SavannaTrees: SavannaTrees
 ExtraGoldOre: ExtraGold
+ExtraEmeraldOre: ExtraEmeralds
 Fossils: FossilDecoration
 FrozenTopLayer: SurfaceFreezing
-Icebergs: Icebergs
 InfestedStone: InfestedStone
 JungleGrass: JungleGrass
-JungleTreeForest: JungleTrees
-Lakes: DefaultLakes
 LushCavesDecoration: LushCavesVegetationFeatures
+MeadowVegetation: MeadowVegetation
 MonsterRooms: DefaultMonsterRoom
-OceanCaves: OceanCarvers
-Ores: DefaultOres
-PlainsTallGrass: SavannaGrass
 ReedsAndPumpkins: DefaultExtraVegetation
-SavannaTrees: SavannaTrees
-SedimentDisks: DefaultSoftDisks
-SwampClayDisks: SwampClayDisk
-SwampVegetation: SwampVegetation
-TaigaGrassAndMushrooms: TaigaGrass
-TaigaGrassDeadBushesMushrooms: GiantTaigaVegetation
-TaigaLargeFerns: Ferns
 TaigaRocks: MossyStoneBlock
 TallSeagrassLush: DefaultSeagrass
+
+# These are now part of other default features
+Lakes: null
+OceanCaves: null
