Port living entity
Custom models seem to refuse to be added as a class

--- a/src/fabric-1.19.1/particle.definition.yaml
+++ b/src/fabric-1.19.1/particle.definition.yaml
@@ -7,4 +7,4 @@ templates:
 
 global_templates:
   - template: elementinits/particles.java.ftl
-    name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameParticles.java"
+    name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameParticleTypes.java"
