--- a/src/fabric-1.19.1/biome.definition.yaml
+++ b/src/fabric-1.19.1/biome.definition.yaml
@@ -11,4 +11,4 @@ localizationkeys:
   - key: biome.@modid.@registryname
     mapto: name
 
-field_exclusions: [ treeVines, treeFruits ]
+field_exclusions: [ groundBlock, undergroundBlock, underwaterBlock, treeVines, treeFruits ]
