--- a/src/fabric-1.19.1/workspacebase/build.gradle
+++ b/src/fabric-1.19.1/workspacebase/build.gradle
@@ -10,12 +10,12 @@ version = '1.0.0'
 group = 'com.yourname.modid'
 
 dependencies {
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
+    minecraft "com.mojang:minecraft:1.19.1"
     mappings loom.officialMojangMappings()
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    modImplementation "net.fabricmc:fabric-loader:0.14.8"
 
     //Fabric api
-    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:0.58.4+1.19.1"
 }
 
 processResources {
