--- a/src/fabric-1.19.1/workspacebase/build.gradle
+++ b/src/fabric-1.19.1/workspacebase/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:0.14.8"
 
     //Fabric api
-    modImplementation "net.fabricmc.fabric-api:fabric-api:0.58.4+1.19.1"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${generator.getGeneratorBuildFileVersion()}+1.19.1"
 }
 
 processResources {
