--- a/src/fabric-1.19.1/generator.yaml
+++ b/src/fabric-1.19.1/generator.yaml
@@ -3,10 +3,10 @@ status: experimental
 buildfileversion: 0.58.4
 subversion: 1.6.1
 
-java_models:
-  key: mojmap-1.19.x
-  compatible: [mojmap-1.17.x, mojmap-1.18.x]
-  requested_key_words: [ModelPart, ~ModelRenderer]
+#java_models:
+#  key: mojmap-1.19.x
+#  compatible: [mojmap-1.17.x, mojmap-1.18.x]
+#  requested_key_words: [ModelPart, ~ModelRenderer]
 
 gradle:
   setup_task: tasks
