--- a/src/fabric-1.19.2/block.definition.yaml
+++ b/src/fabric-1.19.2/block.definition.yaml
@@ -431,4 +431,4 @@ global_templates:
 
 field_exclusions: [ creativePickItem, displayFluidOverlay, plantsGrowOn, beaconColorModifier, isLadder, enchantPowerBonus, aiPathNodeType,
                     hasEnergyStorage, isFluidTank, energyInitial, energyCapacity, energyMaxReceive, energyMaxExtract, fluidCapacity, fluidRestrictions,
-                    onDestroyedByPlayer ]
+                    onDestroyedByPlayer, canRedstoneConnect ]
