--- a/src/fabric-1.19.2/rangeditem.definition.yaml
+++ b/src/fabric-1.19.2/rangeditem.definition.yaml
@@ -3,6 +3,10 @@ templates:
     name: "@SRCROOT/@BASEPACKAGEPATH/item/@NAMEItem.java"
   - template: rangeditem/projectile_entity.java.ftl
     name: "@SRCROOT/@BASEPACKAGEPATH/entity/@NAMEEntity.java"
+  - template: rangeditem/projectile_renderer.java.ftl
+    name: "@SRCROOT/@BASEPACKAGEPATH/client/renderer/@NAMERenderer.java"
+    condition: isCustomModel()
+    deleteWhenConditionFalse: true
   - template: json/rangeditem.json.ftl
     writer: json
     condition: "renderType #= 0"
@@ -16,4 +20,4 @@ localizationkeys:
   - key: item.@modid.@registryname
     mapto: name
 
-field_exclusions: [ bulletModel, customBulletModelTexture, onEntitySwing ]
+field_exclusions: [ onEntitySwing ]
