--- a/src/fabric-1.19.2/mappings/defaultfeatures.yaml
+++ b/src/fabric-1.19.2/mappings/defaultfeatures.yaml
@@ -25,6 +25,7 @@ MonsterRooms: DefaultMonsterRoom
 ReedsAndPumpkins: DefaultExtraVegetation
 TaigaRocks: MossyStoneBlock
 TallSeagrassLush: DefaultSeagrass
+Sculk: Sculk
 
 # These are now part of other default features
 Lakes: null
