--- a/src/fabric-1.19.2/mappings/effects.yaml
+++ b/src/fabric-1.19.2/mappings/effects.yaml
@@ -33,3 +33,4 @@ CONDUIT_POWER: MobEffects.CONDUIT_POWER
 DOLPHINS_GRACE: MobEffects.DOLPHINS_GRACE
 BAD_OMEN: MobEffects.BAD_OMEN
 HERO_OF_THE_VILLAGE: MobEffects.HERO_OF_THE_VILLAGE
+DARKNESS: MobEffects.DARKNESS
