--- a/src/fabric-1.19.2/mappings/enchantments.yaml
+++ b/src/fabric-1.19.2/mappings/enchantments.yaml
@@ -39,3 +39,4 @@ PIERCING: Enchantments.PIERCING
 MENDING: Enchantments.MENDING
 VANISHING_CURSE: Enchantments.VANISHING_CURSE
 SOUL_SPEED: Enchantments.SOUL_SPEED
+SWIFT_SNEAK: Enchantments.SWIFT_SNEAK
