--- a/src/fabric-1.19.2/mappings/materials.yaml
+++ b/src/fabric-1.19.2/mappings/materials.yaml
@@ -48,3 +48,5 @@ AMETHYST: AMETHYST
 POWDER_SNOW: POWDER_SNOW
 REDSTONE_LIGHT: BUILDABLE_GLASS
 CORAL: WATER_PLANT
+FROGSPAWN: FROGSPAWN
+FROGLIGHT: FROGLIGHT
