--- a/src/fabric-1.19.2/mappings/potions.yaml
+++ b/src/fabric-1.19.2/mappings/potions.yaml
@@ -1,6 +1,6 @@
 _default: Potions.EMPTY
 _mcreator_prefix: "CUSTOM:"
-_mcreator_map_template: "@JavaModNamePotions.@REGISTRYNAME"
+_mcreator_map_template: "@JavaModNamePotions.@REGISTRYNAME.get()"
 EMPTY: Potions.EMPTY
 WATER: Potions.WATER
 MUNDANE: Potions.MUNDANE
