--- a/src/fabric-1.19.2/mappings/sounds.yaml
+++ b/src/fabric-1.19.2/mappings/sounds.yaml
@@ -389,6 +389,7 @@ entity.parrot.imitate.hoglin: entity.parrot.imitate.hoglin
 entity.parrot.imitate.piglin: entity.parrot.imitate.piglin
 entity.parrot.imitate.piglin_brute: entity.parrot.imitate.piglin_brute
 entity.parrot.imitate.zoglin: entity.parrot.imitate.zoglin
+entity.parrot.imitate.warden: entity.parrot.imitate.warden
 entity.pig.ambient: entity.pig.ambient
 entity.pig.death: entity.pig.death
 entity.pig.hurt: entity.pig.hurt
@@ -568,16 +569,21 @@ music.nether.basalt_deltas: music.nether.basalt_deltas
 music.nether.soul_sand_valley: music.nether.soul_sand_valley
 music.nether.crimson_forest: music.nether.crimson_forest
 music.nether.warped_forest: music.nether.warped_forest
+music.overworld.deep_dark: music.overworld.deep_dark
 music.overworld.dripstone_caves: music.overworld.dripstone_caves
 music.overworld.grove: music.overworld.grove
 music.overworld.jagged_peaks: music.overworld.jagged_peaks
 music.overworld.lush_caves: music.overworld.lush_caves
+music.overworld.swamp: music.overworld.swamp
+music.overworld.jungle_and_forest: music.overworld.jungle_and_forest
+music.overworld.old_growth_taiga: music.overworld.old_growth_taiga
 music.overworld.meadow: music.overworld.meadow
 music.overworld.frozen_peaks: music.overworld.frozen_peaks
 music.overworld.snow_slopes: music.overworld.snowy_slopes
 music.overworld.stony_peaks: music.overworld.stony_peaks
 record.11: music_disc.11
 record.13: music_disc.13
+record.5: music_disc.5
 record.blocks: music_disc.blocks
 record.cat: music_disc.cat
 record.chirp: music_disc.chirp
@@ -643,7 +649,7 @@ block.conduit.attack.target: block.conduit.attack.target
 block.conduit.deactivate: block.conduit.deactivate
 block.crop.break: block.crop.break
 block.growing_plant.crop: block.growing_plant.crop
-item.crop.plant: item.crop.planted
+item.crop.plant: item.crop.plant
 item.crossbow.hit: item.crossbow.hit
 item.crossbow.loading_end: item.crossbow.loading_end
 item.crossbow.loading_middle: item.crossbow.loading_middle
@@ -1140,6 +1146,7 @@ entity.goat.long_jump: entity.goat.long_jump
 entity.goat.milk: entity.goat.milk
 entity.goat.prepare_ram: entity.goat.prepare_ram
 entity.goat.ram_impact: entity.goat.ram_impact
+entity.goat.horn_break: entity.goat.horn_break
 entity.goat.screaming.ambient: entity.goat.screaming.ambient
 entity.goat.screaming.death: entity.goat.screaming.death
 entity.goat.screaming.eat: entity.goat.screaming.eat
@@ -1148,6 +1155,7 @@ entity.goat.screaming.long_jump: entity.goat.screaming.long_jump
 entity.goat.screaming.milk: entity.goat.screaming.milk
 entity.goat.screaming.prepare_ram: entity.goat.screaming.prepare_ram
 entity.goat.screaming.ram_impact: entity.goat.screaming.ram_impact
+entity.goat.screaming.horn_break: entity.goat.screaming.horn_break
 entity.goat.step: entity.goat.step
 block.hanging_roots.break: block.hanging_roots.break
 block.hanging_roots.fall: block.hanging_roots.fall
@@ -1209,3 +1217,113 @@ item.dye.use: item.dye.use
 item.bundle.drop_contents: item.bundle.drop_contents
 item.bundle.insert: item.bundle.insert
 item.bundle.remove_one: item.bundle.remove_one
+entity.allay.ambient_with_item: entity.allay.ambient_with_item
+entity.allay.ambient_without_item: entity.allay.ambient_without_item
+entity.allay.death: entity.allay.death
+entity.allay.hurt: entity.allay.hurt
+entity.allay.item_given: entity.allay.item_given
+entity.allay.item_taken: entity.allay.item_taken
+entity.allay.item_thrown: entity.allay.item_thrown
+item.bucket.empty_tadpole: item.bucket.empty_tadpole
+item.bucket.fill_tadpole: item.bucket.fill_tadpole
+block.froglight.break: block.froglight.break
+block.froglight.fall: block.froglight.fall
+block.froglight.hit: block.froglight.hit
+block.froglight.place: block.froglight.place
+block.froglight.step: block.froglight.step
+block.frogspawn.break: block.frogspawn.break
+block.frogspawn.fall: block.frogspawn.fall
+block.frogspawn.hatch: block.frogspawn.hatch
+block.frogspawn.hit: block.frogspawn.hit
+block.frogspawn.place: block.frogspawn.place
+block.frogspawn.step: block.frogspawn.step
+entity.frog.ambient: entity.frog.ambient
+entity.frog.death: entity.frog.death
+entity.frog.eat: entity.frog.eat
+entity.frog.hurt: entity.frog.hurt
+entity.frog.lay_spawn: entity.frog.lay_spawn
+entity.frog.long_jump: entity.frog.long_jump
+entity.frog.step: entity.frog.step
+entity.frog.tongue: entity.frog.tongue
+item.goat_horn.play: item.goat_horn.play
+item.goat_horn.sound.0: item.goat_horn.sound.0
+item.goat_horn.sound.1: item.goat_horn.sound.1
+item.goat_horn.sound.2: item.goat_horn.sound.2
+item.goat_horn.sound.3: item.goat_horn.sound.3
+item.goat_horn.sound.4: item.goat_horn.sound.4
+item.goat_horn.sound.5: item.goat_horn.sound.5
+item.goat_horn.sound.6: item.goat_horn.sound.6
+item.goat_horn.sound.7: item.goat_horn.sound.7
+block.mud.break: block.mud.break
+block.mud.fall: block.mud.fall
+block.mud.hit: block.mud.hit
+block.mud.place: block.mud.place
+block.mud.step: block.mud.step
+block.mud_bricks.break: block.mud_bricks.break
+block.mud_bricks.fall: block.mud_bricks.fall
+block.mud_bricks.hit: block.mud_bricks.hit
+block.mud_bricks.place: block.mud_bricks.place
+block.mud_bricks.step: block.mud_bricks.step
+block.muddy_mangrove_roots.break: block.muddy_mangrove_roots.break
+block.muddy_mangrove_roots.fall: block.muddy_mangrove_roots.fall
+block.muddy_mangrove_roots.hit: block.muddy_mangrove_roots.hit
+block.muddy_mangrove_roots.place: block.muddy_mangrove_roots.place
+block.muddy_mangrove_roots.step: block.muddy_mangrove_roots.step
+block.packed_mud.break: block.packed_mud.break
+block.packed_mud.fall: block.packed_mud.fall
+block.packed_mud.hit: block.packed_mud.hit
+block.packed_mud.place: block.packed_mud.place
+block.packed_mud.step: block.packed_mud.step
+block.sculk.spread: block.sculk.spread
+block.sculk.charge: block.sculk.charge
+block.sculk.break: block.sculk.break
+block.sculk.fall: block.sculk.fall
+block.sculk.hit: block.sculk.hit
+block.sculk.place: block.sculk.place
+block.sculk.step: block.sculk.step
+block.sculk_catalyst.bloom: block.sculk_catalyst.bloom
+block.sculk_catalyst.break: block.sculk_catalyst.break
+block.sculk_catalyst.fall: block.sculk_catalyst.fall
+block.sculk_catalyst.hit: block.sculk_catalyst.hit
+block.sculk_catalyst.place: block.sculk_catalyst.place
+block.sculk_catalyst.step: block.sculk_catalyst.step
+block.sculk_shrieker.shriek: block.sculk_shrieker.shriek
+block.sculk_shrieker.break: block.sculk_shrieker.break
+block.sculk_shrieker.fall: block.sculk_shrieker.fall
+block.sculk_shrieker.hit: block.sculk_shrieker.hit
+block.sculk_shrieker.place: block.sculk_shrieker.place
+block.sculk_shrieker.step: block.sculk_shrieker.step
+block.sculk_vein.break: block.sculk_vein.break
+block.sculk_vein.fall: block.sculk_vein.fall
+block.sculk_vein.hit: block.sculk_vein.hit
+block.sculk_vein.place: block.sculk_vein.place
+block.sculk_vein.step: block.sculk_vein.step
+entity.tadpole.death: entity.tadpole.death
+entity.tadpole.flop: entity.tadpole.flop
+entity.tadpole.grow_up: entity.tadpole.grow_up
+entity.tadpole.hurt: entity.tadpole.hurt
+entity.warden.agitated: entity.warden.agitated
+entity.warden.ambient: entity.warden.ambient
+entity.warden.angry: entity.warden.angry
+entity.warden.attack_impact: entity.warden.attack_impact
+entity.warden.death: entity.warden.death
+entity.warden.dig: entity.warden.dig
+entity.warden.emerge: entity.warden.emerge
+entity.warden.heartbeat: entity.warden.heartbeat
+entity.warden.hurt: entity.warden.hurt
+entity.warden.listening: entity.warden.listening
+entity.warden.listening_angry: entity.warden.listening_angry
+entity.warden.nearby_close: entity.warden.nearby_close
+entity.warden.nearby_closer: entity.warden.nearby_closer
+entity.warden.nearby_closest: entity.warden.nearby_closest
+entity.warden.roar: entity.warden.roar
+entity.warden.sniff: entity.warden.sniff
+entity.warden.sonic_boom: entity.warden.sonic_boom
+entity.warden.sonic_charge: entity.warden.sonic_charge
+entity.warden.step: entity.warden.step
+entity.warden.tendril_clicks: entity.warden.tendril_clicks
+block.mangrove_roots.break: block.mangrove_roots.break
+block.mangrove_roots.fall: block.mangrove_roots.fall
+block.mangrove_roots.hit: block.mangrove_roots.hit
+block.mangrove_roots.place: block.mangrove_roots.place
+block.mangrove_roots.step: block.mangrove_roots.step
