--- a/src/fabric-1.19.2/mappings/stepsounds.yaml
+++ b/src/fabric-1.19.2/mappings/stepsounds.yaml
@@ -70,8 +70,19 @@ ROOTED_DIRT: ROOTED_DIRT
 HANGING_ROOTS: HANGING_ROOTS
 AZALEA_LEAVES: AZALEA_LEAVES
 SCULK_SENSOR: SCULK_SENSOR
+SCULK_CATALYST: SCULK_CATALYST
+SCULK: SCULK
+SCULK_VEIN: SCULK_VEIN
+SCULK_SHRIEKER: SCULK_SHRIEKER
 GLOW_LICHEN: GLOW_LICHEN
 DEEPSLATE: DEEPSLATE
 DEEPSLATE_BRICKS: DEEPSLATE_BRICKS
 DEEPSLATE_TILES: DEEPSLATE_TILES
 POLISHED_DEEPSLATE: POLISHED_DEEPSLATE
+FROGLIGHT: FROGLIGHT
+FROGSPAWN: FROGSPAWN
+MANGROVE_ROOTS: MANGROVE_ROOTS
+MUDDY_MANGROVE_ROOTS: MUDDY_MANGROVE_ROOTS
+MUD: MUD
+MUD_BRICKS: MUD_BRICKS
+PACKED_MUD: PACKED_MUD
