--- a/src/fabric-1.19.2/biome.definition.yaml
+++ b/src/fabric-1.19.2/biome.definition.yaml
@@ -1,14 +1,22 @@
 templates:
-  - template: biome.java.ftl
+  - template: biome/biome.java.ftl
     name: "@SRCROOT/@BASEPACKAGEPATH/world/biome/@NAMEBiome.java"
+  - template: biome/region.java.ftl
+    name: "@SRCROOT/@BASEPACKAGEPATH/world/biome/regions/@NAMERegion.java"
 
 global_templates:
   - template: elementinits/biomes.java.ftl
-    writer: java
     name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameBiomes.java"
+  - template: elementinits/surfacerules.java.ftl
+    name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameSurfaceRules.java"
+  - template: modbase/terrablender.java.ftl
+    name: "@SRCROOT/@BASEPACKAGEPATH/TerraBlenderInit.java"
+    canLock: true
+    condition: ${settings.getMCreatorDependenciesRaw()?seq_contains("terrablender")}
+    deleteWhenConditionFalse: true
 
 localizationkeys:
   - key: biome.@modid.@registryname
     mapto: name
 
-field_exclusions: [ groundBlock, undergroundBlock, underwaterBlock, spawnBiome, spawnInCaves, treeVines, treeFruits ] # biomeCategory doesn't exist anymore
+field_exclusions: [ spawnInCaves, treeVines, treeFruits ]
