--- a/src/fabric-1.19.2/livingentity.definition.yaml
+++ b/src/fabric-1.19.2/livingentity.definition.yaml
@@ -17,4 +17,6 @@ localizationkeys:
   - key: entity.@modid.@registryname
     mapto: mobName
 
+unmodifiable_ai_bases: [ Bat, MagmaCube, Slime ]
+
 field_exclusions: [ spawnInDungeons, ranged, rangedItemType, rangedAttackItem ]
