Revert "Added support for armor tick procedures (#296)"
This reverts commit 5b0a92b5a0022171c1a94976d06b521ca5699488.

--- a/src/fabric-1.19.2/armor.definition.yaml
+++ b/src/fabric-1.19.2/armor.definition.yaml
@@ -36,6 +36,6 @@ localizationkeys:
   - key: item.@modid.@registryname_boots
     mapto: bootsName
 
-field_exclusions: [ helmetModel, helmetModelPart, helmetModelTexture, bodyModel, bodyModelPart, bodyModelTexture, armsModelPartL,
-                    armsModelPartR, leggingsModel, leggingsModelPartL, leggingsModelPartR, leggingsModelTexture, bootsModel,
-                    bootsModelPartL, bootsModelPartR, bootsModelTexture ]
+field_exclusions: [ helmetModel, helmetModelPart, helmetModelTexture, onHelmetTick, bodyModel, bodyModelPart, bodyModelTexture, armsModelPartL,
+                    armsModelPartR, onBodyTick, leggingsModel, leggingsModelPartL, leggingsModelPartR, leggingsModelTexture, onLeggingsTick, bootsModel,
+                    bootsModelPartL, bootsModelPartR, bootsModelTexture, onBootsTick]
