Fixed Fishing Rods Mixins
Added a new mixin to fix the line render.
Fixed the previous mixin to not make it instantly delete the bobber.
Added mixin.jsons to generator.yaml, allowing it to generate when it's needed (Previously didn't generate)

--- a/src/fabric-1.19.2/generator.yaml
+++ b/src/fabric-1.19.2/generator.yaml
@@ -66,6 +66,7 @@ base_templates:
   writer: file
   name: "@RESROOT/@modid.mixins.json"
   condition: ${w.hasToolsOfType("Fishing rod")}
+  deleteWhenConditionFalse: true
 
 sources_setup_tasks:
   - task: copy_models
