--- a/src/fabric-1.19.2/block.definition.yaml
+++ b/src/fabric-1.19.2/block.definition.yaml
@@ -430,5 +430,4 @@ global_templates:
     name: "@RESROOT/data/fabric/tags/blocks/mineable/needs_tool_level_7.json"
 
 field_exclusions: [ creativePickItem, displayFluidOverlay, plantsGrowOn, beaconColorModifier, isLadder, enchantPowerBonus, aiPathNodeType,
-                    hasEnergyStorage, isFluidTank, energyInitial, energyCapacity, energyMaxReceive, energyMaxExtract, fluidCapacity, fluidRestrictions,
-                    onDestroyedByPlayer, canRedstoneConnect ]
+                    hasEnergyStorage, isFluidTank, energyInitial, energyCapacity, energyMaxReceive, energyMaxExtract, fluidCapacity, fluidRestrictions, canRedstoneConnect ]
