Added RepairItemRecipe Mixin and refactored some mixin related things
Added RepairItemRecipe Mixin and refactored a lot of things related to mixins

-Changed the condition for base mixin files for generation to be having any Item Base type
-Refactored fabric.mod.json and mixins.json to match the new conditions
-Added "Damage item instead of consuming" to tool and items.
-Added the mixin to prevent them from being repairable by combination (Forge has a method for this, fabric doesn't)

--- a/src/fabric-1.19.2/common.items.yaml
+++ b/src/fabric-1.19.2/common.items.yaml
@@ -1,3 +1,6 @@
 global_templates:
   - template: elementinits/items.java.ftl
     name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameItems.java"
+  - template: mixins/repairitemrecipemixin.java.ftl
+    writer: java
+    name: "@SRCROOT/@BASEPACKAGEPATH/mixins/@JavaModNameRepairItemRecipeMixin.java"
