--- a/src/fabric-1.19.2/item.definition.yaml
+++ b/src/fabric-1.19.2/item.definition.yaml
@@ -27,4 +27,4 @@ localizationkeys:
   - key: item.@modid.@registryname
     mapto: name
 
-field_exclusions: [ onEntitySwing, onDroppedByPlayer, damageOnCrafting ]
+field_exclusions: [ onEntitySwing, onDroppedByPlayer ]
