--- a/src/fabric-1.19.2/variables/blockstate.yaml
+++ b/src/fabric-1.19.2/variables/blockstate.yaml
@@ -2,9 +2,9 @@ defaultvalue: Blocks.AIR.defaultBlockState()
 scopes:
   local:
     init: ${var.getType().getJavaType(generator.getWorkspace())} ${var.getName()} = ${var.getType().getDefaultValue(generator.getWorkspace())};
-    get: /*@BlockState*/(${name})
+    get: /*@BlockState*/${name}
     set: <#include "mcitems.ftl"> ${name} = ${mappedBlockToBlockStateCode(value)};
   global_session:
     init: public static BlockState ${var.getName()} = ${generator.map(var.getValue(), "blocksitems")}.defaultBlockState();
-    get: /*@BlockState*/(${JavaModName}Variables.${name})
+    get: /*@BlockState*/${JavaModName}Variables.${name}
     set: <#include "mcitems.ftl"> ${JavaModName}Variables.${name} = ${mappedBlockToBlockStateCode(value)};
