--- a/src/fabric-1.19.2/variables/logic.yaml
+++ b/src/fabric-1.19.2/variables/logic.yaml
@@ -8,3 +8,19 @@ scopes:
     init: public static boolean ${var.getName()} = ${var.getValue()};
     get: ${JavaModName}Variables.${name}
     set: ${JavaModName}Variables.${name} = ${opt.removeParentheses(value)};
+  global_world:
+    init: public boolean ${var.getName()} = ${var.getValue()};
+    read: ${var.getName()} = nbt.getBoolean("${var.getName()}");
+    write: nbt.putBoolean("${var.getName()}" , ${var.getName()});
+    get: ${JavaModName}Variables.WorldVariables.get(world).${name}
+    set: |
+      ${JavaModName}Variables.WorldVariables.get(world).${name} = ${opt.removeParentheses(value)};
+      ${JavaModName}Variables.WorldVariables.get(world).syncData(world);
+  global_map:
+    init: public boolean ${var.getName()} = ${var.getValue()};
+    read: ${var.getName()} = nbt.getBoolean("${var.getName()}");
+    write: nbt.putBoolean("${var.getName()}" , ${var.getName()});
+    get: ${JavaModName}Variables.MapVariables.get(world).${name}
+    set: |
+      ${JavaModName}Variables.MapVariables.get(world).${name} = ${opt.removeParentheses(value)};
+      ${JavaModName}Variables.MapVariables.get(world).syncData(world);
