Added an actual refmap.json and fixed incompatibilies on the fishing renderer
Added an actual refmap.json and fixed incompatibilies on the fishing renderer

--- a/src/fabric-1.19.2/workspacebase/build.gradle
+++ b/src/fabric-1.19.2/workspacebase/build.gradle
@@ -45,4 +45,10 @@ jar {
     from "LICENSE"
 }
 
+loom {
+	mixin {
+		defaultRefmapName = actualmodid + ".refmap.json"
+	}
+}
+
 apply from: 'mcreator.gradle'
