Added RepairItemRecipe Mixin and refactored some mixin related things (All for "DamageItem" instead of consuming on crafting) (#309)
* Added RepairItemRecipe Mixin and refactored some mixin related things

Added RepairItemRecipe Mixin and refactored a lot of things related to mixins

-Changed the condition for base mixin files for generation to be having any Item Base type
-Refactored fabric.mod.json and mixins.json to match the new conditions
-Added "Damage item instead of consuming" to tool and items.
-Added the mixin to prevent them from being repairable by combination (Forge has a method for this, fabric doesn't)

* Update tool.java.ftl

* Update common.items.yaml

* Update generator.yaml

Should have been true

* Minor changes

Co-authored-by: Goldorion <38427877+Goldorion@users.noreply.github.com>

--- a/src/fabric-1.19.2/generator.yaml
+++ b/src/fabric-1.19.2/generator.yaml
@@ -65,7 +65,7 @@ base_templates:
 - template: modbase/mixins.json.ftl
   writer: file
   name: "@RESROOT/@modid.mixins.json"
-  condition: ${w.hasToolsOfType("Fishing rod")}
+  condition: ${w.hasElementsOfBaseType("item")}
   deleteWhenConditionFalse: true
 
 sources_setup_tasks:
