Port creative tabs

--- a/src/fabric-1.19.2/mappings/tabs.yaml
+++ b/src/fabric-1.19.2/mappings/tabs.yaml
@@ -12,3 +12,4 @@ TOOLS: CreativeModeTab.TAB_TOOLS
 COMBAT: CreativeModeTab.TAB_COMBAT
 BREWING: CreativeModeTab.TAB_BREWING
 MATERIALS: CreativeModeTab.TAB_MATERIALS
+COLORED_BLOCKS: CreativeModeTab.TAB_BUILDING_BLOCKS
