--- a/src/fabric-1.19.2/overlay.definition.yaml
+++ b/src/fabric-1.19.2/overlay.definition.yaml
@@ -7,3 +7,8 @@ global_templates:
     name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameOverlays.java"
 
 field_exclusions: [ priority, overlayTarget ]
+
+localizationkeys:
+  - fromlist: data.getFixedTextLabels()
+    key: gui.@modid.@registryname.@[getName()]
+    mapto: getRenderText()
