--- a/src/fabric-1.20/function.definition.yaml
+++ b/src/fabric-1.20/function.definition.yaml
@@ -1,4 +1,4 @@
 templates:
-  - template: function.mcfunction.ftl
+  - template: json/function.mcfunction.ftl
     writer: file
     name: "@RESROOT/data/@[getNamespace()]/functions/@[getName()].mcfunction"
