--- a/src/fabric-1.20/recipe.definition.yaml
+++ b/src/fabric-1.20/recipe.definition.yaml
@@ -5,31 +5,31 @@ global_templates:
     deleteWhenConditionFalse: true
 
 templates:
-  - template: json/smelting.json.ftl
+  - template: json/recipe/smelting.json.ftl
     writer: json
     name: "@RESROOT/data/@[getNamespace()]/recipes/@[getName()].json"
     condition: "recipeType %= Smelting"
-  - template: json/blasting.json.ftl
+  - template: json/recipe/blasting.json.ftl
     writer: json
     name: "@RESROOT/data/@[getNamespace()]/recipes/@[getName()].json"
     condition: "recipeType %= Blasting"
-  - template: json/campfire_cooking.json.ftl
+  - template: json/recipe/campfire_cooking.json.ftl
     writer: json
     name: "@RESROOT/data/@[getNamespace()]/recipes/@[getName()].json"
     condition: "recipeType %= Campfire cooking"
-  - template: json/smoking.json.ftl
+  - template: json/recipe/smoking.json.ftl
     writer: json
     name: "@RESROOT/data/@[getNamespace()]/recipes/@[getName()].json"
     condition: "recipeType %= Smoking"
-  - template: json/crafting.json.ftl
+  - template: json/recipe/crafting.json.ftl
     writer: json
     name: "@RESROOT/data/@[getNamespace()]/recipes/@[getName()].json"
     condition: "recipeType %= Crafting"
-  - template: json/stonecutting.json.ftl
+  - template: json/recipe/stonecutting.json.ftl
     writer: json
     name: "@RESROOT/data/@[getNamespace()]/recipes/@[getName()].json"
     condition: "recipeType %= Stone cutting"
-  - template: json/smithing.json.ftl
+  - template: json/recipe/smithing.json.ftl
     writer: json
     name: "@RESROOT/data/@[getNamespace()]/recipes/@[getName()].json"
     condition: "recipeType %= Smithing"
