--- a/src/fabric-1.20/mappings/stepsounds.yaml
+++ b/src/fabric-1.20/mappings/stepsounds.yaml
@@ -1,6 +1,6 @@
 _default: GRAVEL
-GROUND: GRAVEL
 WOOD: WOOD
+GROUND: GRAVEL
 PLANT: GRASS
 LILY_PADS: LILY_PAD
 STONE: STONE
@@ -63,6 +63,7 @@ SPORE_BLOSSOM: SPORE_BLOSSOM
 AZALEA: AZALEA
 FLOWERING_AZALEA: FLOWERING_AZALEA
 MOSS_CARPET: MOSS_CARPET
+PINK_PETALS: PINK_PETALS
 MOSS_BLOCK: MOSS
 BIG_DRIPLEAF: BIG_DRIPLEAF
 SMALL_DRIPLEAF: SMALL_DRIPLEAF
@@ -86,3 +87,15 @@ MUDDY_MANGROVE_ROOTS: MUDDY_MANGROVE_ROOTS
 MUD: MUD
 MUD_BRICKS: MUD_BRICKS
 PACKED_MUD: PACKED_MUD
+HANGING_SIGN: HANGING_SIGN
+NETHER_WOOD_HANGING_SIGN: NETHER_WOOD_HANGING_SIGN
+BAMBOO_WOOD_HANGING_SIGN: BAMBOO_WOOD_HANGING_SIGN
+BAMBOO_WOOD: BAMBOO_WOOD
+NETHER_WOOD: NETHER_WOOD
+CHERRY_WOOD: CHERRY_WOOD
+CHERRY_SAPLING: CHERRY_SAPLING
+CHERRY_LEAVES: CHERRY_LEAVES
+CHERRY_WOOD_HANGING_SIGN: CHERRY_WOOD_HANGING_SIGN
+CHISELED_BOOKSHELF: CHISELED_BOOKSHELF
+SUSPICIOUS_SAND: SUSPICIOUS_SAND
+DECORATED_POT: DECORATED_POT
