--- a/src/fabric-1.20/mappings/tabs.yaml
+++ b/src/fabric-1.20/mappings/tabs.yaml
@@ -1,15 +1,14 @@
-_default: CreativeModeTab.TAB_MISC
+_default: CreativeModeTabs.BUILDING_BLOCKS
 _mcreator_prefix: "CUSTOM:"
 _mcreator_map_template: "@JavaModNameTabs.TAB_@REGISTRYNAME"
 No creative tab entry: null
-BUILDING_BLOCKS: CreativeModeTab.TAB_BUILDING_BLOCKS
-DECORATIONS: CreativeModeTab.TAB_DECORATIONS
-REDSTONE: CreativeModeTab.TAB_REDSTONE
-TRANSPORTATION: CreativeModeTab.TAB_TRANSPORTATION
-MISC: CreativeModeTab.TAB_MISC
-FOOD: CreativeModeTab.TAB_FOOD
-TOOLS: CreativeModeTab.TAB_TOOLS
-COMBAT: CreativeModeTab.TAB_COMBAT
-BREWING: CreativeModeTab.TAB_BREWING
-MATERIALS: CreativeModeTab.TAB_MATERIALS
-COLORED_BLOCKS: CreativeModeTab.TAB_BUILDING_BLOCKS
+BUILDING_BLOCKS: CreativeModeTabs.BUILDING_BLOCKS
+DECORATIONS: CreativeModeTabs.NATURAL_BLOCKS
+REDSTONE: CreativeModeTabs.REDSTONE_BLOCKS
+FOOD: CreativeModeTabs.FOOD_AND_DRINKS
+TOOLS: CreativeModeTabs.TOOLS_AND_UTILITIES
+COMBAT: CreativeModeTabs.COMBAT
+MATERIALS: CreativeModeTabs.INGREDIENTS
+MISC: CreativeModeTabs.SPAWN_EGGS
+TRANSPORTATION: CreativeModeTabs.FUNCTIONAL_BLOCKS
+BREWING: CreativeModeTabs.COLORED_BLOCKS
