--- a/src/fabric-1.20/workspacebase/run/server.properties
+++ b/src/fabric-1.20/workspacebase/run/server.properties
@@ -30,6 +30,6 @@ player-idle-timeout=0
 max-players=20
 max-tick-time=60000
 spawn-monsters=true
-view-distance=10
+view-distance=16
 generate-structures=true
-motd=Integrated MCreator Testing Sever
+motd=Integrated MCreator Testing Server
