Port creative tabs

--- a/src/fabric-1.20/tab.definition.yaml
+++ b/src/fabric-1.20/tab.definition.yaml
@@ -1,5 +1,5 @@
 localizationkeys:
-  - key: itemGroup.@modid.@registryname
+  - key: item_group.@modid.@registryname
     mapto: name
 
 global_templates:
