--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 import java.nio.file.Files
 
 class Globals {
-	private static final def ARCHIVE_NAME = "generator-fabric-1.20" // The name of the exported file
+	private static final def ARCHIVE_NAME = "generator-fabric-1.20.1" // The name of the exported file
 
 	// You can change the root folder of your OS if you have a custom installation
-	public static final def MCREATOR_ROOT_FOLDER_WINDOWS = "C://Program Files/Pylo/MCreatorEAP2023222518/" // Default path on Windows
+	public static final def MCREATOR_ROOT_FOLDER_WINDOWS = "C://Program Files/Pylo/MCreator/" // Default path on Windows
 	public static def MCREATOR_ROOT_FOLDER_MAC_LINUX = "/Applications/MCreator.app/Contents/MacOS/mcreator" // Default path on macOS and Linux
 
 	static def getArchiveName() {
@@ -19,14 +19,14 @@ class Globals {
 // workaround for IDEA-265203
 System.setProperty("user.dir", projectDir.toString())
 
-task exportPlugin(type: Zip) {
+tasks.register('exportPlugin', Zip) {
 	group("mcreator_plugins")
 	from 'src'
 	archiveFileName = Globals.getArchiveName()
 	destinationDirectory = file('build/')
 }
 
-task install {
+tasks.register('install') {
 	dependsOn exportPlugin
 	group("mcreator_plugins")
 	doLast {
@@ -39,7 +39,7 @@ task install {
 	}
 }
 
-task runMCreator {
+tasks.register('runMCreator') {
 	dependsOn install
 	group("mcreator_plugins")
 	doLast {
