--- a/src/fabric-1.20.1/generator.yaml
+++ b/src/fabric-1.20.1/generator.yaml
@@ -1,5 +1,5 @@
 name: Minecraft Fabric for @minecraft - @buildfileversion
-status: dev
+status: experimental
 buildfileversion: 0.83.0
 subversion: 19
 
