--- a/src/fabric-1.20.1/musicdisc.definition.yaml
+++ b/src/fabric-1.20.1/musicdisc.definition.yaml
@@ -5,6 +5,11 @@ templates:
     writer: json
     name: "@MODASSETSROOT/models/item/@registryname.json"
 
+global_templates:
+  - template: json/musicdisctag.json.ftl
+    writer: json
+    name: "@RESROOT/data/minecraft/tags/items/music_discs.json"
+
 localizationkeys:
   - key: item.@modid.@registryname
     mapto: name
