--- a/src/apis/terrablender.yaml
+++ b/src/apis/terrablender.yaml
@@ -1,4 +1,4 @@
-fabric-1.19.2:
+fabric-1.20.1:
   gradle: |
     repositories {
       maven {
@@ -6,5 +6,7 @@ fabric-1.19.2:
       }
     }
     dependencies {
-      modImplementation 'com.github.glitchfiend:TerraBlender-fabric:1.19.2-2.0.1.127'
+      modImplementation 'com.github.glitchfiend:TerraBlender-fabric:1.20.1-3.0.0.165'
     }
+
+name: "TerraBlender (Fabric - Biomes)"
